[package]
name = "suture-node"
version = "5.1.0"
edition = "2024"
license.workspace = true
publish = false
description = "Node.js native bindings for Suture VCS"

[lib]
crate-type = ["cdylib"]

[dependencies]
suture-core = { path = "../suture-core", version = "5.0.0" }
suture-common = { path = "../suture-common", version = "5.0.0" }
suture-driver = { path = "../suture-driver", version = "5.0.0" }
suture-driver-json = { path = "../suture-driver-json", version = "5.0.0" }
suture-driver-yaml = { path = "../suture-driver-yaml", version = "5.0.0" }
suture-driver-toml = { path = "../suture-driver-toml", version = "5.0.0" }
suture-driver-csv = { path = "../suture-driver-csv", version = "5.0.0" }
napi = { version = "3", features = ["napi9"] }
napi-derive = "3.5.6"
serde_json = "1"
