[package]
name = "suture-ooxml"
version = "0.5.0"
edition = "2024"

[dependencies]
suture-driver = { path = "../suture-driver" }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
