[package]
name = "suture-ooxml"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "0.10.0" }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
